# advent-of-code-2025

./: CMakeLists.txt  buildAndRun.sh  main.cpp  makeAndRun.sh
tasks/: day1.h  day10.h  day11.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h
utils/: utils.h
